# Practice

./: RC.py  README.md  plot_results.py
2D_PDES/: PDE_Solve.py  parameters.py  problems.py
2D_RNN/: detailed_layer.py  lstm_archs.py  main.py  utils.py  visualize.py
2D_RNN/Example_data/: Data_Extractor.ipynb  POD_Preprocessing.ipynb
AE_GNN/: README.md
Assorted_Fortran/Burgers/: burger.f90
Assorted_Fortran/KHI/: mbatch.job  sbatch.job
Assorted_Fortran/MPI3D_v2/: mlong.job  sbatch.job  sgs3d.f90  spec3d.f90
Assorted_Fortran/Moving_Mesh_1D/: Burgers_Mathematica.nb  Initial_Plot.plt  MM_Plot.plt
Assorted_Fortran/NS2D/: a.out  ns2d.f90
Assorted_Fortran/RBC/: input.txt  slong.job
Assorted_Python/: OF_Automation.py  linearshallowwater.py
Basic_Regression/: RFR.py  XGB.py  fit_csv.sh  make_folds.py  parse_results.py  run_regressors.py  trial.csv
Burgers_DEIM/: GP.py  ML.py  POD_DEIM.npy  Parameters.py  Problem.py  ROM.py  Train_Loss.npy  Val_Loss.npy  best_weights_lstm.h5  best_weights_slfn.h5
CAE_LSTM/: README.md
CAE_LSTM_Burgers/: README.md
CAE_NPCA/: CAE_Layers.py  CAE_Model.py  README.md
CPP2Python/Py_C_Burgers/: README.md
CPP2Python/Pybind_Demo/: CMakeLists.txt
CPP2Python/Pybind_Python2CPP/: check.py  example.cpp
CPP_Tutorials/Py_C_Burgers/: CMakeLists.txt  app.cpp
CPP_Tutorials/Pybind_Demo/: app.cpp
CPP_Tutorials/TF_C_Tutorial/C_app/: CMakeLists.txt
CPP_Tutorials/TF_C_Tutorial/C_app/src/: mwe.cpp  tf_utils.cpp
CPP_Tutorials/Tensorflow_C/: clean_run.sh
CPP_Tutorials/Visualization/: CMakeLists.txt  main.cpp
Cavity_CPP/: Headers.h
Cluster_ROM/: Cluster_ROMs.ipynb  README.md
D2Q9_Cavity_Flow/: D2Q9.py
GCN_Spektral/: GCN_Intro.py
GCN_Spektral/NOAA_GCN/: GCN_Sensors.ipynb  (+1 more)
Heat_CUDA_C/: Temperature.txt  cuda_heat.cu  read_c.py
Heat_C_ADI/: Plot.py
Heat_Equation_C/: Temperature.txt  heat_c.c  read_c.py
Heat_Equation_C_MPI/: 0  1  13  15  2  3  4  6  9  a.out  mpi_check.c  read_c_parallel.py
Julia_Burgers_Equation/: FTCS_Burgers.ipynb  README.md
Julia_Heat_Equation/: Heat_Equation.jl  README.md
Keras_Demo/: best_model.hd5  keras_demo.py  loss_history.txt
Kernel_POD/: Optimized_Preimage.npy  README.md  data_splitter.py  kernel_pod.py
LPA_LSTM/: lstm_archs.py  utils.py
LSTM_TF2/: README.md  SINDY_Data.npy  SST_Train.npy
Lapack/: lapacke_example_aux.h
MAE_Tensorflow_Tutorial/: MAE_TF_Tutorial.py  README.md
MPI_OpenMP_Fortran_Heat/: 2D_Heat_Equation_MP_MPI.f90  input.txt
Matlab_POD_1D/: OneDPOD.m  burgers_rhs.m  burgers_rom_rhs.m  harm_rhs.m  harm_rom_rhs.m  nls_rhs.m  nls_rom_rhs.m
Misc_Fortran_C/Lapack/: CMakeLists.txt  example.cpp  lapacke_example_aux.cpp
Misc_Python/: Lasso.py  Savgol.py
NODE_Julia/: neural_ode_III.jl  neural_ode_IV.jl
Neural_ODE/: README.md
Nonlinear_SWE/: SWE.py  parameters.py  problem.py
Nonlinear_SWE_GP/: PCA_Coefficients_q1.npy  PCA_Coefficients_q2.npy  PCA_Coefficients_q3.npy  PCA_Vectors_q1.npy  PCA_Vectors_q2.npy  PCA_Vectors_q3.npy  SWE.py  Visualization.ipynb  parameters.py  problem.py  q1_snapshots.npy
Online_SVD/: Burgers_train_snapshots.npy  README.md  online_svd.py  online_svd_parallel.py
Other_Python/: Recursive_ELM.py
PDE_Solvers/: README.md
POD_Petrov_Galerkin/: GP.py
Parallel_Learning_Tensorflow_CPU/: Parallel_Learning.py  Parallel_Visualization.py  best_model_0.h5  best_model_2.h5  best_model_3.h5  loss_history_2.txt  loss_history_3.txt
Parallel_POD/: APMOS.py  APMOS_Basis.npy  Dual_POD.py  Dual_POD_Basis.npy  README.md  Serial_POD_Bases.npy  data_maker.py  data_splitter.py
Plot_data_extractor/: extract_data.py
Py_C_Burgers/: CMakeLists.txt  README.md  app.cpp  doc.md
Python_FDM_Acceleration/: FTCS_Cython.pyx  FTCS_Cython_OMP.pyx  FTCS_Profiling.py  FTCS_Pythran.py  build_and_run.sh
Pytorch_PINN/: PINN.ipynb  README.md  conservative.ckpt  non_conservative.ckpt  skew_symmetric_0.ckpt  skew_symmetric_1.ckpt
Reservoir_Computing/: RC.py
Surrogate_MBO/: coeff_data_2000.npy  optimizers.py  requirements.txt  training_stats.csv
Surrogate_Optimization/: DOE_2000.npy  README.md  nn_opt.py  requirements.txt  rl_optimizers.py  surrogate_models.py  training_stats.csv  utils.py
Temporal_CNN/: Temporal_CNN.ipynb  Time_Series_Testing_Data.npy  tcn_weights.h5  tconv.py
UnusualVolumeDetector/: market_scanner.py
VI_NF/: VI_NF.ipynb
Variational_AE/: VAE.py
Voronoi/: kai_voronoi.py
Web_Crawler/: Crawler.py
mpi4py/: MPI_Heat.py  Serial_Heat.py
netcdf_reader/: netcdf_example.py
projection_optimize/: README.md  coeff_data.npy  constraints.py  doe_data.npy  nn_opt.py  optimizers.py  requirements.txt  rl_checkpoint  rl_optimizers.py  surrogate_environments.py  surrogate_models.py  utils.py
(+497 files in other folders)
